<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/greetingscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dirtwhite"
    android:fontFamily="@font/concert_one"
    android:layout_marginBottom="50sp"
    tools:context=".GreetingScreen">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="10sp"
        android:fontFamily="@font/concert_one"
        android:text="@string/artspark"
        android:textColor="@color/yellow"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/good_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:id="@+id/greeting"
            android:layout_width="170sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/concert_one"
            android:text="@string/greeting_user"
            android:textColor="@color/green"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/concert_one"
            android:text="@string/username"
            android:textColor="@color/green"
            android:textSize="40sp"
            android:textAllCaps="true"/>
    </LinearLayout>

    <TextView
        android:id="@+id/motivation_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/good_day"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/concert_one"
        android:text="@string/motivation_question"
        android:textColor="@color/green"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/quote"
        android:layout_width="300sp"
        android:layout_height="130sp"
        android:layout_below="@id/motivation_question"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:background="@drawable/border"
        android:fontFamily="@font/concert_one"
        android:padding="20sp"
        android:text="@string/quote1"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textColorHint="@color/yellow"
        android:textSize="18sp" />

    <Button
        android:id="@+id/enterbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quote"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:text="@string/proceed"
        android:fontFamily="@font/concert_one"
        android:textSize="20sp"
        android:textColor="@color/dirtwhite"
        android:backgroundTint="@color/orange"
        />

    <ImageView
        android:id="@+id/mascot"
        android:layout_width="410dp"
        android:layout_height="335dp"
        app:srcCompat="@drawable/artspark_mascot"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>

