<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dirtwhite"
    android:fontFamily="@font/concert_one"
    tools:context=".SettingsScreen">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/upperNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yellow">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="50sp"
                android:layout_height="50sp"
                app:srcCompat="?attr/actionModeCloseDrawable"
                android:layout_marginTop="10sp"
                android:background="@android:color/transparent"
                app:tint="@color/green"
                android:contentDescription="@string/icon"
                />

            <TextView
                android:id="@+id/menuTitleSettings"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:text="@string/settingsnavbartitle"
                android:layout_marginTop="20sp"
                android:fontFamily="@font/concert_one"
                android:textSize="25sp"
                android:textColor="@color/dirtwhite"
                android:layout_gravity="center"
                />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/upperNavBar"
    android:layout_above="@id/bottomNavigationView"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:layout_marginTop="30sp">

        <androidx.cardview.widget.CardView
            android:id="@+id/profilecard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="100sp"
            android:layout_centerHorizontal="true"
            >
            <ImageView
                android:id="@+id/profile"
                android:layout_width="130sp"
                android:layout_height="130sp"
                android:background="@drawable/mouzart_face"/>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/changeProfilePicture"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:text="@string/changeimage"
            android:layout_below="@id/profilecard"
            android:fontFamily="@font/concert_one"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:textColor="@color/dirtwhite"
            android:backgroundTint="@color/yellow"
            />

        <RelativeLayout
            android:id="@+id/editname"
            android:layout_below="@id/changeProfilePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_centerHorizontal="true"
            >

        <EditText
            android:id="@+id/username"
            android:layout_width="190sp"
            android:layout_height="50sp"
            android:hint="@string/username"
            android:textSize="20sp"
            android:fontFamily="@font/concert_one"
            android:textAlignment="center"
            android:inputType="text"
            android:textColor="@color/green"
            android:textColorHint="@color/yellow"
            android:background="@drawable/border"
            android:layout_centerHorizontal="true"
            android:capitalize="words"
            android:maxLength="10"
            />

            <ImageButton
                android:layout_toLeftOf="@id/username"
                android:id="@+id/changeTextButton"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:src="@drawable/artspark_moodboard_icon2"
                android:onClick="onClick"
                android:background="@android:color/transparent"
                android:contentDescription="@string/proceed"
                />
        </RelativeLayout>

    </RelativeLayout>

</ScrollView>


    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_above="@id/bottomNavigationView"
        android:background="@drawable/shadow"/>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        app:itemActiveIndicatorStyle="@color/dirtwhite"
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/dirtwhite"
        app:itemIconTint="@drawable/bnv_item_background"
        app:itemTextColor="@drawable/bnv_item_background"
        app:menu="@menu/bottom_navmenu" />

</RelativeLayout>